After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 602500 - Crash in nautilus_file_peek_display_name at nautilus-file.c line 3692
Crash in nautilus_file_peek_display_name at nautilus-file.c line 3692
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
2.32.x
Other All
: High blocker
: ---
Assigned To: Tomas Bzatek
Nautilus Maintainers
: 604137 605561 605660 606589 609608 609687 610080 610739 611142 611516 611700 611839 611961 612612 615363 615369 616690 616856 617628 618245 618249 619239 619789 620347 621102 621179 622642 623488 623853 624320 624688 625206 626398 628074 630048 630052 631677 631744 631937 632200 632343 632995 635467 635542 636068 636537 636829 636903 637101 638192 640435 641222 641313 641883 642200 643070 644734 645113 645725 647664 648995 651093 653981 654499 661246 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-11-20 13:58 UTC by aliceinwire
Modified: 2011-10-08 16:51 UTC
See Also:
GNOME target: 2.32.x
GNOME version: 2.31/2.32


Attachments
Check file descriptor in nautilus_file_peek_display_name before accessing it (545 bytes, patch)
2011-01-26 10:49 UTC, Marcus Husar
committed Details | Review

Description aliceinwire 2009-11-20 13:58:58 UTC
Version: 2.28.1

What were you doing when the application crashed?
watching pdf



Distribution: Debian squeeze/sid
Gnome Release: 2.28.0 2009-11-18 (Debian)
BugBuddy Version: 2.28.0

System: Linux 2.6.31-1-686 #1 SMP Sun Nov 15 20:39:33 UTC 2009 i686
X Vendor: The X.Org Foundation
X Vendor Release: 10605000
Selinux: No
Accessibility: Disabled
GTK+ Theme: Darklooks
Icon Theme: gnome-alternative
GTK+ Modules: gnomebreakpad, canberra-gtk-module

Memory status: size: 92762112 vsize: 92762112 resident: 30863360 share: 19578880 rss: 30863360 rss_rlim: 18446744073709551615
CPU usage: start_time: 1258725146 rtime: 1941 utime: 1829 stime: 112 cutime:0 cstime: 1 timeout: 0 it_real_value: 0 frequency: 100

Backtrace was generated from '/usr/bin/nautilus'

[Thread debugging using libthread_db enabled]
[New Thread 0xb0af6b70 (LWP 21803)]
[New Thread 0xb5959b70 (LWP 21086)]
0xb7895424 in __kernel_vsyscall ()

Thread 1 (Thread 0xb6717760 (LWP 21046))

  • #0 __kernel_vsyscall
  • #1 waitpid
    from /lib/i686/cmov/libpthread.so.0
  • #2 IA__g_spawn_sync
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/glib/gspawn.c line 386
  • #3 IA__g_spawn_command_line_sync
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/glib/gspawn.c line 700
  • #4 ??
    from /usr/lib/gtk-2.0/modules/libgnomebreakpad.so
  • #5 <signal handler called>
  • #6 nautilus_file_peek_display_name
    at nautilus-file.c line 3692
  • #7 nautilus_file_get_display_name
    at nautilus-file.c line 3715
  • #8 selection_changed_callback
    at nautilus-information-panel.c line 1124
  • #9 IA__g_cclosure_marshal_VOID__VOID
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/gobject/gmarshal.c line 77
  • #10 IA__g_closure_invoke
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/gobject/gclosure.c line 767
  • #11 signal_emit_unlocked_R
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/gobject/gsignal.c line 3247
  • #12 IA__g_signal_emit_valist
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/gobject/gsignal.c line 2980
  • #13 IA__g_signal_emit_by_name
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/gobject/gsignal.c line 3074
  • #14 nautilus_window_report_selection_changed
    at nautilus-window-manage-views.c line 115
  • #15 nautilus_window_info_report_selection_changed
    at nautilus-window-info.c line 151
  • #16 fm_directory_view_send_selection_change
    at fm-directory-view.c line 2276
  • #17 display_selection_info_idle_callback
    at fm-directory-view.c line 2879
  • #18 g_idle_dispatch
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/glib/gmain.c line 4065
  • #19 g_main_dispatch
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/glib/gmain.c line 1960
  • #20 IA__g_main_context_dispatch
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/glib/gmain.c line 2513
  • #21 g_main_context_iterate
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/glib/gmain.c line 2591
  • #22 IA__g_main_loop_run
    at /build/buildd-glib2.0_2.22.2-2-i386-R8GTDn/glib2.0-2.22.2/glib/gmain.c line 2799
  • #23 IA__gtk_main
    at /build/buildd-gtk+2.0_2.18.3-1-i386-YrT8XN/gtk+2.0-2.18.3/gtk/gtkmain.c line 1218
  • #24 main
    at nautilus-main.c line 544

	Inferior 1 [process 21046] will be detached.

Quit anyway? (y or n) [answered Y; input not from terminal]


---- Critical and fatal warnings logged during execution ----

** nautilus **: nautilus_file_get_uri: assertion `NAUTILUS_IS_FILE (file)' failed 


----------- .xsession-errors (10 sec old) ---------------------
Found Metastream: KPX_GROUP_TREE_STATE
 Done.
Detecting Dropbox architecture... Done.
Will use 32 bit Dropbox.
Checking currently installed version... Done.
Looking for temporary space...Created.
Checking for update... Done.
Downloading update. This may take a few minutes... Done.
Stopping Dropbox...dropbox: no process found
 Done.
Installing Dropbox 0.7.68... Done.
Starting Dropbox...Done!
Complete.
** (nautilus:21046): CRITICAL **: nautilus_file_get_uri: assertion `NAUTILUS_IS_FILE (file)' failed
--------------------------------------------------
Comment 1 Akhil Laddha 2009-12-09 09:36:34 UTC
*** Bug 604137 has been marked as a duplicate of this bug. ***
Comment 2 Akhil Laddha 2009-12-28 01:40:06 UTC
*** Bug 605561 has been marked as a duplicate of this bug. ***
Comment 3 Fabio Durán Verdugo 2009-12-29 13:11:09 UTC
*** Bug 605660 has been marked as a duplicate of this bug. ***
Comment 4 Akhil Laddha 2010-02-11 04:09:57 UTC
*** Bug 609608 has been marked as a duplicate of this bug. ***
Comment 5 Akhil Laddha 2010-02-16 09:29:13 UTC
*** Bug 610080 has been marked as a duplicate of this bug. ***
Comment 6 Fabio Durán Verdugo 2010-02-22 21:41:35 UTC
*** Bug 610739 has been marked as a duplicate of this bug. ***
Comment 7 Akhil Laddha 2010-02-26 03:35:35 UTC
*** Bug 611142 has been marked as a duplicate of this bug. ***
Comment 8 Akhil Laddha 2010-02-26 03:37:43 UTC
*** Bug 606589 has been marked as a duplicate of this bug. ***
Comment 9 Akhil Laddha 2010-02-26 03:38:52 UTC
*** Bug 609687 has been marked as a duplicate of this bug. ***
Comment 10 Akhil Laddha 2010-03-02 03:56:58 UTC
*** Bug 611516 has been marked as a duplicate of this bug. ***
Comment 11 André Klapper 2010-03-03 23:37:53 UTC
*** Bug 611700 has been marked as a duplicate of this bug. ***
Comment 12 André Klapper 2010-03-03 23:39:22 UTC
Debian, Solaris, Gentoo, OpenSuse. Does not look distro-specific.
Comment 13 Akhil Laddha 2010-03-05 03:40:33 UTC
*** Bug 611839 has been marked as a duplicate of this bug. ***
Comment 14 Akhil Laddha 2010-03-08 03:39:18 UTC
*** Bug 611961 has been marked as a duplicate of this bug. ***
Comment 15 Fabio Durán Verdugo 2010-03-11 22:48:02 UTC
*** Bug 612612 has been marked as a duplicate of this bug. ***
Comment 16 Akhil Laddha 2010-04-11 13:06:52 UTC
*** Bug 615369 has been marked as a duplicate of this bug. ***
Comment 17 Akhil Laddha 2010-04-11 13:16:32 UTC
*** Bug 615363 has been marked as a duplicate of this bug. ***
Comment 18 Sebastien Bacher 2010-04-21 14:06:57 UTC
There is a bug similar on https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/565081

"This issue happened when I pressed 'delete' to remove a .jpeg image from a directory. Before the image was deleted I pressed delete again and nautilus crashed."
Comment 19 Fabio Durán Verdugo 2010-04-25 01:45:22 UTC
*** Bug 616690 has been marked as a duplicate of this bug. ***
Comment 20 Fabio Durán Verdugo 2010-04-26 15:15:56 UTC
*** Bug 616856 has been marked as a duplicate of this bug. ***
Comment 21 Akhil Laddha 2010-05-04 10:20:27 UTC
*** Bug 617628 has been marked as a duplicate of this bug. ***
Comment 22 Akhil Laddha 2010-05-10 10:57:33 UTC
*** Bug 618245 has been marked as a duplicate of this bug. ***
Comment 23 Cosimo Cecchi 2010-05-10 11:13:45 UTC
*** Bug 618249 has been marked as a duplicate of this bug. ***
Comment 24 Fabio Durán Verdugo 2010-05-20 22:37:12 UTC
*** Bug 619239 has been marked as a duplicate of this bug. ***
Comment 25 Akhil Laddha 2010-06-02 11:07:57 UTC
*** Bug 620347 has been marked as a duplicate of this bug. ***
Comment 26 Fabio Durán Verdugo 2010-06-09 15:31:11 UTC
*** Bug 621102 has been marked as a duplicate of this bug. ***
Comment 27 Sebastien Bacher 2010-06-10 09:08:38 UTC
https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/590436 has a similar crash happened regularly to an user deleting files on a nfs share
Comment 28 Akhil Laddha 2010-06-10 11:18:09 UTC
*** Bug 621179 has been marked as a duplicate of this bug. ***
Comment 29 André Klapper 2010-06-10 11:25:58 UTC
(Some reports are from 2.30)
Comment 30 Fabio Durán Verdugo 2010-06-24 18:44:30 UTC
*** Bug 622642 has been marked as a duplicate of this bug. ***
Comment 31 Akhil Laddha 2010-07-04 03:53:00 UTC
*** Bug 623488 has been marked as a duplicate of this bug. ***
Comment 32 Fabio Durán Verdugo 2010-07-08 23:05:42 UTC
*** Bug 623853 has been marked as a duplicate of this bug. ***
Comment 33 Akhil Laddha 2010-07-10 04:11:24 UTC
*** Bug 619789 has been marked as a duplicate of this bug. ***
Comment 34 Akhil Laddha 2010-07-19 04:29:44 UTC
*** Bug 624688 has been marked as a duplicate of this bug. ***
Comment 35 Akhil Laddha 2010-07-26 16:27:17 UTC
*** Bug 625206 has been marked as a duplicate of this bug. ***
Comment 36 Marcus Carlson 2010-08-01 12:09:52 UTC
Cosimo, the call seems to come from at nautilus-information-panel.c that was removed a few days ago. Should this be marked as FIXED then?
Comment 37 Akhil Laddha 2010-08-09 03:58:03 UTC
*** Bug 626398 has been marked as a duplicate of this bug. ***
Comment 38 Fabio Durán Verdugo 2010-08-26 21:36:35 UTC
*** Bug 628074 has been marked as a duplicate of this bug. ***
Comment 39 Fabio Durán Verdugo 2010-08-26 22:51:05 UTC
*** Bug 624320 has been marked as a duplicate of this bug. ***
Comment 40 Cosimo Cecchi 2010-09-19 12:27:40 UTC
*** Bug 630052 has been marked as a duplicate of this bug. ***
Comment 41 Fabio Durán Verdugo 2010-10-08 14:52:20 UTC
*** Bug 631677 has been marked as a duplicate of this bug. ***
Comment 42 Cosimo Cecchi 2010-10-09 17:28:55 UTC
*** Bug 631744 has been marked as a duplicate of this bug. ***
Comment 43 Fabio Durán Verdugo 2010-10-12 02:06:45 UTC
*** Bug 631937 has been marked as a duplicate of this bug. ***
Comment 44 Fabio Durán Verdugo 2010-10-18 00:19:26 UTC
*** Bug 632343 has been marked as a duplicate of this bug. ***
Comment 45 Fabio Durán Verdugo 2010-10-18 00:19:35 UTC
*** Bug 632200 has been marked as a duplicate of this bug. ***
Comment 46 Akhil Laddha 2010-10-24 02:10:44 UTC
*** Bug 632995 has been marked as a duplicate of this bug. ***
Comment 47 Akhil Laddha 2010-10-24 02:11:35 UTC
last dupe in 2.32.x
Comment 48 Fabio Durán Verdugo 2010-11-21 22:40:46 UTC
*** Bug 635467 has been marked as a duplicate of this bug. ***
Comment 49 Fabio Durán Verdugo 2010-11-23 01:55:27 UTC
*** Bug 635542 has been marked as a duplicate of this bug. ***
Comment 50 Fabio Durán Verdugo 2010-11-29 18:59:54 UTC
*** Bug 636068 has been marked as a duplicate of this bug. ***
Comment 51 Fabio Durán Verdugo 2010-12-06 01:10:06 UTC
*** Bug 636537 has been marked as a duplicate of this bug. ***
Comment 52 Fabio Durán Verdugo 2010-12-09 04:01:40 UTC
*** Bug 636829 has been marked as a duplicate of this bug. ***
Comment 53 Fabio Durán Verdugo 2010-12-10 02:48:16 UTC
*** Bug 636903 has been marked as a duplicate of this bug. ***
Comment 54 André Klapper 2010-12-12 20:26:11 UTC
*** Bug 630048 has been marked as a duplicate of this bug. ***
Comment 55 André Klapper 2010-12-12 20:26:52 UTC
*** Bug 637101 has been marked as a duplicate of this bug. ***
Comment 56 André Klapper 2010-12-12 20:27:15 UTC
Also see bug 630048 comment 4 for a nice trace.
Comment 57 Fabio Durán Verdugo 2010-12-28 20:12:41 UTC
*** Bug 638192 has been marked as a duplicate of this bug. ***
Comment 58 Fabio Durán Verdugo 2011-01-24 16:36:00 UTC
*** Bug 640435 has been marked as a duplicate of this bug. ***
Comment 59 Marcus Husar 2011-01-26 10:49:59 UTC
Created attachment 179361 [details] [review]
Check file descriptor in nautilus_file_peek_display_name before accessing it

To properly reproduce the problems described in this bugreport and its duplicates I created 8 empty files between 200 and 500 MB. After deleting all those files at a time with shift + delete I pressed the left arrow key. Nautilus crashed at once.

The attached patch tries to prevent a crash in nautilus_file_peek_display_name() by checking if a file is gone before accessing its file descriptor. Even so a crash in functions called by nautilus_file_peek_display_name() could occur. But that’s rather unlikely.

After applying this patch I did a test with 8 empty files each sized 400 MB. By repeating it 10 times I couldn't trigger a crash.
Comment 60 Tomas Bzatek 2011-01-26 13:58:53 UTC
(In reply to comment #59)
> To properly reproduce the problems described in this bugreport and its
> duplicates I created 8 empty files between 200 and 500 MB. After deleting all
> those files at a time with shift + delete I pressed the left arrow key.
> Nautilus crashed at once.

Marcus, what nautilus version is this? Also, are you in browser mode with info pane displayed or is it spatial?
Comment 61 Marcus Husar 2011-01-26 15:48:38 UTC
I'm afraid I used only nautilus 2.30.1 (Debian Squeeze) in browser mode for my first tests. With this version I can still reproduce a crash. But it's not as easy as a few hours ago.

With the version from origin/master (without any additional patch) in browser mode I cannot trigger any crash. So I perhaps didn't test 2.91.7+git before. I apologise for any inconvenience caused by this fault.

I will further investigate if this bug still exists.
Comment 62 Tomas Bzatek 2011-01-27 10:10:05 UTC
I've been finally able to reproduce the issue and proposed patch avoids the crash. However, it's clearly a race condition somewhere since I've seen several other assert failures. None of them were fatal though.

This is more difficult to hit in git master since we don't have information pane anymore.
Comment 63 Tomas Bzatek 2011-01-27 10:47:52 UTC
Committed slightly modified patch in master and gnome-2-32:

commit 8f6245a80cfd571274813fe4d5d950769d02bfba
Author: Tomas Bzatek <tbzatek@redhat.com>
Date:   Thu Jan 27 11:22:10 2011 +0100

    Prevent a crash in nautilus_file_peek_display_name() on invalid NautilusFile
    
    This is more a workaround only, expect assert failures at other
    places when something bad happens. There's a race condition somewhere,
    this patch only prevents immediate crash.
    
    Patch by Marcus Husar <marcus.husar@rose.uni-heidelberg.de>
    
    https://bugzilla.gnome.org/show_bug.cgi?id=602500
Comment 64 Akhil Laddha 2011-02-02 08:40:13 UTC
*** Bug 641222 has been marked as a duplicate of this bug. ***
Comment 65 Akhil Laddha 2011-02-03 03:18:39 UTC
*** Bug 641313 has been marked as a duplicate of this bug. ***
Comment 66 Akhil Laddha 2011-02-09 00:57:40 UTC
*** Bug 641883 has been marked as a duplicate of this bug. ***
Comment 67 Akhil Laddha 2011-02-13 02:11:52 UTC
*** Bug 642200 has been marked as a duplicate of this bug. ***
Comment 68 Stefano Teso 2011-02-23 16:23:49 UTC
*** Bug 643070 has been marked as a duplicate of this bug. ***
Comment 69 Fabio Durán Verdugo 2011-03-15 01:16:58 UTC
*** Bug 644734 has been marked as a duplicate of this bug. ***
Comment 70 Akhil Laddha 2011-03-18 10:37:28 UTC
*** Bug 645113 has been marked as a duplicate of this bug. ***
Comment 71 Stefano Teso 2011-04-02 08:17:24 UTC
*** Bug 645725 has been marked as a duplicate of this bug. ***
Comment 72 André Klapper 2011-04-13 17:03:10 UTC
*** Bug 647664 has been marked as a duplicate of this bug. ***
Comment 73 André Klapper 2011-04-30 14:52:23 UTC
*** Bug 648995 has been marked as a duplicate of this bug. ***
Comment 74 Fabio Durán Verdugo 2011-05-26 01:06:12 UTC
*** Bug 651093 has been marked as a duplicate of this bug. ***
Comment 75 Fabio Durán Verdugo 2011-07-05 03:03:33 UTC
*** Bug 653981 has been marked as a duplicate of this bug. ***
Comment 76 André Klapper 2011-07-12 19:48:19 UTC
*** Bug 654499 has been marked as a duplicate of this bug. ***
Comment 77 Fabio Durán Verdugo 2011-10-08 16:51:12 UTC
*** Bug 661246 has been marked as a duplicate of this bug. ***