Prevent a crash in nautilus_file_peek_display_name() on invalid NautilusFile

This is more a workaround only, expect assert failures at other
places when something bad happens. There's a race condition somewhere,
this patch only prevents immediate crash.

Patch by Marcus Husar <marcus.husar@rose.uni-heidelberg.de>

https://bugzilla.gnome.org/show_bug.cgi?id=602500